# openshoki

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: CONTEXT.md  PR.md
docs/plans/done/: 20260627-app-foundation.md  20260628-recording-start-stop.md  20260628-settings-save-directory.md  20260628-system-audio-capture.md
docs/review-perspectives/: performance.md  readability.md  rust-anti-patterns.md  rust-best-practices.md  security.md
docs/rules/: coding-conventions.md  error-handling.md  slint.md
examples/: system_audio_spike.rs  transcript_view.rs
src/: app_audio_monitor.rs  config.rs  main.rs  mic_monitor.rs  mixdown.rs  player.rs  recorder.rs  recordings.rs  single_instance.rs  system_audio.rs  transcribe.rs  transcript.rs  tray.rs  whisper_model.rs
ui/: app-window.slint  recordings-window.slint  style.slint
