[package]
name = "openshoki"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
cpal = "0.18.1"
directories = "6.0.0"
mp3lame-encoder = { version = "0.2.4", features = ["std"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
slint = "1.17.0"
toml = "1.1.2"
tray-icon = "0.24.1"

[build-dependencies]
slint-build = "1.17.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
# 選択した .app からバンドル ID・表示名を読むために NSBundle を使う（NSRunningApplication は
# objc2-app-kit の既定 features に含まれる）。
objc2-foundation = { version = "0.3.2", features = ["NSBundle", "NSString", "NSDictionary"] }
# 既定入力デバイスの稼働状態（IsRunningSomewhere）を CoreAudio のプロパティリスナーで監視する。
# cpal が依存ツリーに持つ objc2 系の CoreAudio バインディングを直接使う（追加ビルドコストなし）。
objc2-core-audio = { version = "0.3.2", default-features = false, features = ["std", "AudioHardware"] }
# macos_13_0 feature でシステム音声キャプチャ API（captures_audio 等）が有効になる。
screencapturekit = { version = "8.0.0", features = ["macos_13_0"] }
